# MaoniSimpleAL

./: CMakeLists.txt  README
CMake/: FindALURE.cmake
src/: Sound.cpp  Sound.hpp  main.cpp  sound.cpp  sound.hpp
